--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -10,7 +10,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) --
+            <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
         </div>
     </div>
     <a class="navbar-brand" href="http://127.0.0.1:5000/">  </a>
